samples/_failures_safe/1761524599_ec6b37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd642215.c: In function ‘main’:
./samples/SAFE/__tmp_fd642215.c:172:25: error: expected ‘)’ at end of input
  172 |     if (sm.current_state
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_fd642215.c:172:5: error: expected declaration or statement at end of input
  172 |     if (sm.current_state
      |     ^~
